feature: cache did verification methods with plc lookups
Signed-off-by: Nick Gerakines <12125+ngerakines@users.noreply.github.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,3 +37,4 @@ tower = { version = "0.5.1", features = ["limit", "timeout", "tokio", "tracing"]
 tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono", "json"] }
 tracing = { version = "0.1.40", features = ["async-await", "log", "valuable"] }
 zstd = "0.13.2"
+reqwest = { version = "0.12.9", features = ["json", "zstd", "rustls-tls"] }
