--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,3 +38,4 @@ tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono", "
 tracing = { version = "0.1.40", features = ["async-await", "log", "valuable"] }
 zstd = "0.13.2"
 reqwest = { version = "0.12.9", features = ["json", "zstd", "rustls-tls"] }
+boa_engine = "0.19.1"
